fixed_templates/kibana_checkov_fixed_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kibana
  labels:
    app: kibana
    release: release-name
    heritage: Helm
  namespace: test-ns
spec:
  type: ClusterIP
  ports:
  - port: 5601
    protocol: TCP
    name: http
    targetPort: 5601
  selector:
    app: kibana
    release: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kibana
  labels:
    app: kibana
    release: release-name
    heritage: Helm
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  namespace: test-ns
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kibana
      release: release-name
  template:
    metadata:
      labels:
        app: kibana
        release: release-name
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 25000
      volumes:
      - name: kibana-tokens
        emptyDir: {}
      - name: elasticsearch-certs
        secret:
          secretName: elasticsearch-master-certs
      - name: secret-volume
        secret:
          secretName: my-secret
      initContainers: null
      containers:
      - name: kibana
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 25000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        image: docker.elastic.co/kibana/kibana:7.17.10@sha256:d829548dd28a5cc3f3aa0879800f43ac47d4a823cde01c5e7adc25d8c5d8cf67
        imagePullPolicy: Always
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
          exec:
            command:
            - bash
            - -c
            - "#!/usr/bin/env bash -e\n\n# Disable nss cache to avoid filling dentry\
              \ cache when calling curl\n# This is required with Kibana Docker using\
              \ nss < 3.52\nexport NSS_SDB_USE_CACHE=no\n\nhttp () {\n    local path=\"\
              ${1}\"\n    set -- -XGET -s --fail -L\n\n    if [ -n \"${ELASTICSEARCH_USERNAME}\"\
              \ ] && [ -n \"${ELASTICSEARCH_PASSWORD}\" ]; then\n      set -- \"$@\"\
              \ -u \"${ELASTICSEARCH_USERNAME}:${ELASTICSEARCH_PASSWORD}\"\n    fi\n\
              \n    STATUS=$(curl --output /dev/null --write-out \"%{http_code}\"\
              \ -k \"$@\" \"http://localhost:5601${path}\")\n    if [[ \"${STATUS}\"\
              \ -eq 200 ]]; then\n      exit 0\n    fi\n\n    echo \"Error: Got HTTP\
              \ code ${STATUS} but expected a 200\"\n    exit 1\n}\n\nhttp \"/app/kibana\"\
              \n"
        ports:
        - containerPort: 5601
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
        - name: elasticsearch-certs
          mountPath: /usr/share/kibana/config/certs
          readOnly: true
        - name: kibana-tokens
          mountPath: /usr/share/kibana/config/tokens
          readOnly: true
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        livenessProbe:
          exec:
            command:
            - ls
            - /
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
